<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_manipulator_test</name>
  <version>1.0.0</version>
  <description>Manipulator ROS test tools</description>
  <maintainer email="quic_jionzho@quicinc.com">JiongZhao</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>qrb_ros_manipulator_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
